TAG: autolittriage-6-0-25-1
DATE: 01/27/2025
STAFF: lec
wts2-1605/e4g-124/Retire AdHoc Server : remove local dependencies" ; git push
        modified:   Backpopulate/getMgiPubmedIDs.py
        modified:   sdGetBackPopulated.py
        modified:   sdGetRawCurGroups.py

TAG: autolittriage-6-0-23-2
TAG: autolittriage-6-0-23-1
DATE: 03/25/2024
STAFF: lec
wts2-1397/Migration to Rocky OS/backend/data loads

TAGautolittriage-6-0-22-2
DATE: 08/28/2023
STAFF: lec
wts2-1155/fl2-491/GOC:  littriageload/merge littriage_goa/littriage_noctua folders to littriage_go
sdGetBackPopulated.py
Notes.txt

TAGautolittriage-6-0-22-1
DATE: 11/30/2022
STAFF: lec
fl2/gxd secondary triage

TAG: autolittriage-6-0-18-2
TAG: autolittriage-6-0-18-1
DATE: 01/10/2022
STAFF: jak
CHANGES: YAKS-107, adapt to MLtextTool changes

TAG: autolittriage-6-0-17-1
DATE: 05/11/2021
STAFF: lec
TR13349/Genome Build 39
